--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
     "start": "nodemon index.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "moongose": "^1.0.0",
     "nodemon": "^3.1.4"
   }
